--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -142,7 +142,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/toyotaconnected/jobs/4425562002'>Job Application for Data Privacy Analyst at Toyota Connected</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -170,11 +170,11 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999695244555-privacy-and-data-governance-analyst'>ClientSolv Technologies Privacy and Data Governance Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
+<h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -222,7 +222,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Privacy and Cybersecurity Analyst. Key Role: Serve as a Cybersecurity and 
 privacy analyst for a DoD client and implement data analysis tools that meet 
@@ -261,7 +261,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/everlaw/f1647737-c7e2-40c7-a254-0db34ba4c2fe'>Everlaw - Privacy Specialist</a></h5> 
+<h5><a href='https://jobs.lever.co/everlaw/f1647737-c7e2-40c7-a254-0db34ba4c2fe'>Everlaw - Privacy Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Collaborate with senior Privacy team members to review and mitigate privacy 
 and data protection risks in connection with Everlaw's products, services, and?...</p>
@@ -278,7 +278,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
+<h5><a href='https://jobs.lever.co/uipath/ece4e548-8d0b-4068-b6a7-72306af7d690'>UiPath - US privacy specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -286,7 +286,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/eyeota/jobs/4355935002'>Job Application for Privacy Specialist at EYEOTA </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/eyeota/jobs/4355935002'>Job Application for Privacy Specialist at EYEOTA </a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -350,7 +350,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1642654'>Job Application for Privacy Analyst at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1642654'>Job Application for Privacy Analyst at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
