--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350163-graphics-designer-ux-ui-design-part-time-full-time-'>Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -56,11 +60,11 @@
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -100,7 +104,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -164,7 +168,7 @@
 <p><span class="badge badge-light">Cape Town</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.nesgt.com/job/107430060289/project-engineer-building/'>PROJECT ENGINEER - BUILDING with ref. BH-118028 - NES Global Talent</a></h5> 
+<h5><a href='https://www.nesgt.com/job/107430060289/project-engineer-building/'>PROJECT ENGINEER - BUILDING with ref. BH-118028 - NES Global Talent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -271,7 +275,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/463664-it-solution-expert-m-w-d-purchasing-indirekte-beschaffung'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/463664-it-solution-expert-m-w-d-purchasing-indirekte-beschaffung'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -379,7 +383,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technical-specialist-5586'>Clinical/Technical Specialist - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technical-specialist-5586'>Clinical/Technical Specialist - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -415,7 +419,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5590/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5590/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -459,11 +463,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">California  San Diego, California  Santa Clara, California  Pleasanton, CASanta Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/455143-it-solution-expert-m-w-d-change-management'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
-<p><span class="badge badge-light">Munich</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/457071-it-solution-expert-m-w-d-purchasing-direkte-beschaffung'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/455143-it-solution-expert-m-w-d-change-management'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
